--- a/files/table0/index.php.2
+++ b/files/table0/index.php.2
@@ -5,7 +5,7 @@ $num = 1;
 
 
 
-print "<p><a href='new.php'>New</a></p>\n";
+print "<p><a href='new.php'>New</a> &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; <a href='buscar.php'>Search</a></p>\n";
 print "<p>&nbsp;</p>\n";
 
 
@@ -18,6 +18,10 @@ $link = connect($db_name, $db_user, $db_passwd);
 
 
 
+$item2 = "";
+$item2_value = "";
+
+
 
 
 $consulta = "DESCRIBE $table";
@@ -26,11 +30,17 @@ $resultado = mysqli_query($link,$consulta);
 $n = 0;
 
 while ($fila = mysqli_fetch_array($resultado)) {
-	$n++;
 	$elem = $fila[0];
-	if ($n == 2) {
+	//print "item${n} -> ${elem}<br>\n";
+	
+	if ($n == 1) {
 		$item1 = $elem;
 	}
+	if ($n == 2) {
+		$item2 = $elem;
+	}
+
+	$n++;
 }
 
 
@@ -45,6 +55,7 @@ print "<table id='etiq'>\n";
 print "<tr>\n";
 print "	<td>num</td>\n";
 print "	<td>${item1}</td>\n";
+print "	<td>${item2}</td>\n";
 print "	<td>&nbsp;</td>\n";
 print "</tr>\n";
 
@@ -52,10 +63,15 @@ while ($fila = mysqli_fetch_array($resultado)) {
 	$ID0 = $fila['ID0'];
 	$item1_value = $fila["$item1"];
 
+	if (isset($fila["$item2"])) {
+		$item2_value = $fila["$item2"];
+	}
+
 	// sortida HTML
 	print "<tr>\n";
 	print "	<td>${num}</td>\n";
 	print "	<td><a href=\"edit.php?ID0=${ID0}\"><b>${item1_value}</b></a></td>\n";
+	print "	<td>${item2_value}</td>\n";
 	print "	<td><a href=\"delete.php?ID0=${ID0}\" title=\"Delete\">[delete]</a></td>\n";
 	print "</tr>\n";
 	
